--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Labyrinth</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="resume">RESUME</string>
+    <string name="new_game">NEW GAME</string>
+    <string name="load_game">LOAD GAME</string>
+    <string name="menu">MENU</string>
 </resources>
